add packageManager in package.json

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "packageManager": "pnpm",
   "devDependencies": {
     "vitepress": "^1.0.2"
   }
